fixing sizing for landing page on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,7 +44,7 @@
 
 @media only screen and (max-width: 370px) {
   #header {
-    height: 29vh !important; }
+    height: 31vh !important; }
 
   .header-subtext {
     font-size: 14px !important; }
@@ -288,7 +288,7 @@
     transform: translateY(-15px); } }
 @media only screen and (max-width: 370px) {
   .absolute {
-    top: 55% !important; } }
+    top: 57% !important; } }
 @media only screen and (max-width: 736px) {
   .bounce {
     display: none; }
@@ -302,7 +302,7 @@
   #inspiration .absolute {
     width: 80%;
     left: 10%;
-    top: 55% !important; } }
+    top: 57% !important; } }
 @media only screen and (min-width: 737px) {
   #inspiration p {
     font-size: 20px; } }
