--- a/public/css/sass/header.scss
+++ b/public/css/sass/header.scss
@@ -50,7 +50,7 @@
 
 @media only screen and (max-width: 370px) {
   #header {
-    height: 29vh !important;
+    height: 31vh !important;
   }
   .header-subtext {
     font-size: 14px !important;
