--- a/public/css/sass/inspiration.scss
+++ b/public/css/sass/inspiration.scss
@@ -136,7 +136,7 @@
 
 @media only screen and (max-width: 370px) {
   .absolute {
-    top: 55% !important;
+    top: 57% !important;
   }
 }
 
@@ -156,7 +156,7 @@
     .absolute {
       width: 80%;
       left: 10%;
-      top: 55% !important;
+      top: 57% !important;
     }
   }
 }
